unpackaged/main/default/objects/cmbls__Expense_Accrual__c/cmbls__Expense_Accrual__c.object-meta.xml
<CustomObject>
    <label>Expense Accrual</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Expense Accrual Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Accruals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>