unpackaged/main/default/objects/cmbls__Expense_Accrual__c/fields/Acc_Amort_Fundera_GL__c.field-meta.xml
<CustomField>
    <fullName>Acc_Amort_Fundera_GL__c</fullName>
    <label>Acc.Amort - Fundera GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>