unpackaged/main/default/objects/cmbls__Expense_Accrual__c/fields/Amortized_Exp_Broker_Fees_GL__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Exp_Broker_Fees_GL__c</fullName>
    <label>Amortized Exp - Broker Fees GL#</label>
    <length>20</length>
    <type>Text</type>
</CustomField>