unpackaged/main/default/objects/cmbls__Expense_Accrual__c/fields/Amortized_Exp_Fundera_GL__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Exp_Fundera_GL__c</fullName>
    <label>Amortized Exp - Fundera GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>