unpackaged/main/default/objects/cmbls__Expense_Accrual__c/fields/Amortized_Income_Org_Fees_GL__c.field-meta.xml
<CustomField>
    <fullName>Amortized_Income_Org_Fees_GL__c</fullName>
    <label>Amortized Income - Org Fees GL #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>